--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.24.0",
     "cheerio": "^1.0.0-rc.10",
     "fs": "^0.0.1-security",
+    "global": "^4.4.0",
     "https": "^1.0.0",
     "mysql": "^2.18.1",
     "node-fetch": "^3.0.0",
